--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ avatar: https://avatars0.githubusercontent.com/u/65621577?s=400
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: https://www.facebook.com/tony.piccolo.31
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/tpiccolo
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
