--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Tony's Website
 
 # Short bio or description (displayed in the header)
-description: Learning to make a website for funn
+description: Wow look at my amazing website
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/65621577?s=400
